--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.26.0",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "ejs": "^3.1.6",
     "express": "^4.17.3",
     "jest": "^27.5.1",
     "pg-promise": "^10.11.1"
